# EnglishPlatform

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
api/: main.py
api/routers/: articles.py  health.py
css/: styles.css
js/: api.js  app.js  tts.js  utils.js
